force-app/main/default/objects/QuoteLineItem/fields/after_discount_uom_price__c.field-meta.xml
<CustomField>
    <fullName>after_discount_uom_price__c</fullName>
    <label>after discount uom price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>