force-app/main/default/objects/QuoteLineItem/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Living Area</fullName>
            </value>
            <value>
                <fullName>Dining Area</fullName>
            </value>
            <value>
                <fullName>Family Lounge</fullName>
            </value>
            <value>
                <fullName>Bedroom</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Pantry</fullName>
            </value>
            <value>
                <fullName>Utility / Laundry</fullName>
            </value>
            <value>
                <fullName>Bathroom</fullName>
            </value>
            <value>
                <fullName>Common Washroom</fullName>
            </value>
            <value>
                <fullName>Ablution Area</fullName>
            </value>
            <value>
                <fullName>Passage / Corridor</fullName>
            </value>
            <value>
                <fullName>Staircase (Internal)</fullName>
            </value>
            <value>
                <fullName>Lobby / Entrance</fullName>
            </value>
            <value>
                <fullName>Balcony</fullName>
            </value>
            <value>
                <fullName>Porch / Sit-out</fullName>
            </value>
            <value>
                <fullName>Patio / Courtyard</fullName>
            </value>
            <value>
                <fullName>Roof</fullName>
            </value>
            <value>
                <fullName>Terrace</fullName>
            </value>
            <value>
                <fullName>Sloping Roof</fullName>
            </value>
            <value>
                <fullName>Building Exterior</fullName>
            </value>
            <value>
                <fullName>Facade / Elevation</fullName>
            </value>
            <value>
                <fullName>Staircase (External)</fullName>
            </value>
            <value>
                <fullName>Compound Wall</fullName>
            </value>
            <value>
                <fullName>Parking / Driveway</fullName>
            </value>
            <value>
                <fullName>Reception</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Retail / Showroom</fullName>
            </value>
            <value>
                <fullName>Restaurant / Cafe</fullName>
            </value>
            <value>
                <fullName>Hotel Lobby</fullName>
            </value>
            <value>
                <fullName>Commercial Washroom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>