force-app/main/default/objects/QuoteLineItem/fields/Dis_Value__c.field-meta.xml
<CustomField>
    <fullName>Dis_Value__c</fullName>
    <label>Discount Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>