force-app/main/default/objects/QuoteLineItem/fields/Moved_to_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Moved_to_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Moved to Delivery</label>
    <type>Checkbox</type>
</CustomField>