force-app/main/default/objects/QuoteLineItem/fields/OpportunityItemId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityItemId__c</fullName>
    <formula>OpportunityLineItem.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Item ID</label>
    <type>Text</type>
</CustomField>