force-app/main/default/objects/QuoteLineItem/fields/Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>Sale_Price__c</fullName>
    <label>RETAIL/MRP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>