force-app/main/default/objects/QuoteLineItem/fields/Sqm__c.field-meta.xml
<CustomField>
    <fullName>Sqm__c</fullName>
    <label>Sqm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>