force-app/main/default/objects/QuoteLineItem/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <label>UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>